Se agrega el 3 punto del Ejercicio I

--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
@@ -2,30 +2,8 @@
 <html>
     <head>
         <title>Tarea HTML de Diego Ortiz!!!</title>
-        <style>
-            h1 {
-                color: blue;
-            }
-            
-            img {
-                width: 400px;
-            }
-
-            #thirdDiv {
-                width: 500px;
-                height: 600px; 
-                background-color: tomato;   
-                padding: 50px;
-                border: 2px dashed green;
-            }
-
-            #spanId {
-                font-size: 18px;
-                margin: 50px;
-            }
-        </style>
+        <link rel="stylesheet" href="./styles.css">
     </head>
-
     <body>
         <div class="divClass">
             <h1>Diego Mauricio Ortiz</h1>
