--- a/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/homework/homework.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Tarea HTML de Diego Ortiz!!!</title>
         <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <div class="divClass">
-            <h1>Diego Mauricio Ortiz</h1>
-            <h3>Henry</h3>
-            <h4>tarea de HTML / CSS</h4>
-        </div>
-        <div class="divClass">
-            <span id="spanId">El Corral: Hamburguesas, malteadas, helados y más!!!</span>
-            <a href="https://www.elcorral.com/" target="_blank">Link a Burger</a>
-        </div>
-        <div id = "thirdDiv">
-            <ul>
-                <li>
-                    <img src="https://www.eluniversal.com.co/binrepository/1050x700/0c0/0d0/none/13704/TFPC/el-corral1_3895971_20201119164216.jpg" alt="Foto1"/>
-                </li>
-                <li>
-                    <img src="https://www.eluniversal.com.co/binrepository/933x700/0c0/0d0/none/13704/MRKD/el-corral2_3895972_20201119164222.jpg" alt="Foto2"/>
-                </li>
-            </ul>
-        </div>    
+        <div align='center'>     
+            <div class="container">
+                <div class="divClass">
+                    <h1>Diego Mauricio Ortiz</h1>
+                    <h3>Henry</h3>
+                    <h4>tarea de HTML / CSS</h4>
+                </div>
+                <div class="divClass">
+                    <span id="spanId">El Corral: Hamburguesas, malteadas, helados y más!!!</span>
+                    <a href="https://www.elcorral.com/" target="_blank">Link a Burger</a>
+                </div>
+                <div id = "thirdDiv">
+                    <ul>
+                        <li>
+                            <img src="https://www.eluniversal.com.co/binrepository/1050x700/0c0/0d0/none/13704/TFPC/el-corral1_3895971_20201119164216.jpg" alt="Foto1"/>
+                        </li>
+                        <li>
+                            <img src="https://www.eluniversal.com.co/binrepository/933x700/0c0/0d0/none/13704/MRKD/el-corral2_3895972_20201119164222.jpg" alt="Foto2"/>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>        
     </body>
 </html>
 
